--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 <option value="2">Over 65</option>
               </select>
             </div>
-            <div class="col-12 pt-5 m-auto">
+            <div class="col-12 pt-5 offset-2">
               <button id="button" class="btn btn-secondary">Genera</button>
+              <button id="button" class="btn btn-secondary">Annulla</button>
             </div>
         </div>
     </div>
